--- a/src/Makefile.am.inc
+++ b/src/Makefile.am.inc
@@ -1,4 +1,4 @@
 
-CEDAR_CFLAGS = -Wall -Wno-unused-variable -Wno-unused-but-set-variable -Werror -D_GNU_SOURCE
+CEDAR_CFLAGS = -Wall -Wno-unused-variable -Wno-unused-but-set-variable -D_GNU_SOURCE
 CEDAR_LDFLAGS = -Wl,--no-undefined -avoid-version 
 
